  - [PREFETCH input] Fixed a bug, added a seekdir so that prefetch information is contained within the timeline if recursive
      is turned on.
  - [RECYCLER input] Fixed a bug, added a seekdir so that recycler information is contained within the timeline if recursive
      is turned on.
  - [LIST files] Added few items into the Windows list files, as well as to create a Mac OS X one.

Version 0.63-1 (bug fixes) (09/10/2012)
  - Removed small additional debugging text from the iehistory module (shouldn't be printed unless we have debug turned on).
  - Fixed a small bug in the _open_file function.


Version 0.63 (09/04/2012)
  - ALL modules/files were run through perltidy using the configuration file of dev/perltidy.conf.
  - Also several modules have had their documentation updated and code reformed to reflect recent release of a style guide
  for the project. perltidy is not enough to enforce that, but at least a start. Rewriting the documentation (pod) is also a vital
  portion of making the modules easier to use/understand/develop.
  - All libraries within the tool and the main API have been rewritten with this in mind, making 'man' documentation considerably
  more useful than it was.
  - [SERIALIZE output] JSON::XS used to serialize the timestamp output, a very simple output module that simply stores
      - This makes it possible to output using this method and then sorting is simpler since it does not require the module
        to read in the csv and change it into something like a hash, since it is already stored as such.
      - This migh become the default output of the tool, and then run l2t_process on that output, turning that into CSV
        instead of using CSV as default and trying to filter that output.
      - This also makes it easier to filter, based on certain attributes, instead of at the line level.
  the timestamp object without really doing anything to it. Use that for easy sorting in later stages.